Making .data-table__table a table-layout:fixed, and assigning the first child in .data-table__table-cell (always a div) rules for hiding overflowing content. The title attribute can still show the full content.

--- a/web-frontend/modules/core/assets/scss/components/data_table.scss
+++ b/web-frontend/modules/core/assets/scss/components/data_table.scss
@@ -58,6 +58,7 @@
   border: none;
   border-collapse: collapse;
   border-spacing: 0;
+  table-layout: fixed;
 }
 
 .data-table__table-cell {
@@ -111,9 +112,14 @@
   position: relative;
   display: flex;
   align-items: center;
-  white-space: nowrap;
   min-width: 0;
   padding: 0 10px;
+
+  :first-child {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
 
   .data-table__table-cell:first-child & {
     padding-left: 0;
